--- a/test3.html
+++ b/test3.html
@@ -9,6 +9,8 @@
 
     <script type="text/javascript" src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.js"></script>
     <link rel="stylesheet" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
+    <link rel="stylesheet" href="jquery.mobile-1.4.5/philzzzyjQM.min.css" />
+    <link rel="stylesheet" href="jquery.mobile-1.4.5/philzzzyjQM.css" />
 
 </head>
 
@@ -20,6 +22,14 @@
         </header>
         <article data-role="content">
             <p>Contenu de la page1</p>
+            <ul data-role="listview" data-inset="true" data-filter="true" data-filter-reveal="true">
+                <li>voiture</li>
+                <li>maison</li>
+                <li>voyage</li>
+                <li>train</li>
+                <li>Avion</li>
+                <li>Item6</li>
+            </ul>
             <input type="text" name="text1">
             <input type="email" name="email">
             <select data-role="slider">
