--- a/test3.html
+++ b/test3.html
@@ -11,12 +11,14 @@
     <link rel="stylesheet" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.css" />
     <link rel="stylesheet" href="jquery.mobile-1.4.5/philzzzyjQM.min.css" />
     <link rel="stylesheet" href="jquery.mobile-1.4.5/philzzzyjQM.css" />
+    
 
 </head>
 
 <body>
     <!-- debut page -->
-    <section data-role="page" id="page1">
+    <!-- <section data-role="page" id="page1" data-theme="B"> -->
+            <section data-role="page" id="page1">
         <header data-role="header" data-position="fixed">
             <h1>L'équipe</h1>
         </header>
