--- a/storage/index.html
+++ b/storage/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <script type="text/javascript" src="libs/modernizr-custom.js"></script>
-        <script type="text/javascript">
-            if(Modernizr.localstorage){
-                console.log('API localstorage présente');
-            } else {
-                console.error("API localstorage non présente");
-            }
-        </script>
-    </head>
-    <body>
 
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <script type="text/javascript" src="libs/modernizr-custom.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        if (Modernizr.localstorage) {
+            console.log('API localstorage présente');
+            localStorage["test"] = "Chaine de caractères";
+            localStorage.test2 = "test2";
+            console.log(localStorage.test2);
+        } else {
+            console.error("API localstorage non présente");
+        }
+    </script>
+    <script type="text/javascript">
+        function displayData(data) {
+            for (var i = 0; i < data.length; i++)
+                $('#tab').append("<tr><td>" + data[i].titre + "</td><td>" + data[i].texte + "</td></tr>");
+        }
+
+        $(document).ready(function () {
+            console.log("ready!");
+            if (navigator.onLine) {
+                $.ajax({
+                    url: "http://iphdata.lequipe.fr/iPhoneDatas/EFR/STD/ALL/V2/home.json"
+                }).done(function (result) {
+                    console.log(result);
+                    localStorage.data = JSON.stringify(result.articles);
+                    displayData(result.articles);
+                });
+            } else {
+                // Je suis hors ligne, on va lire les données locales
+                console.log("je suis hors ligne");
+                displayData(JSON.parse(localStorage.data));
+            }
+
+        });
+    </script>
+</head>
+
+<body>
+    <table id="tab">
+
+    </table>
+</body>
+
 </html>
