--- a/Angular/index.html
+++ b/Angular/index.html
@@ -4,13 +4,33 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+            <!-- Latest compiled and minified CSS -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+            <!-- Optional theme -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+            <!-- Latest compiled and minified JavaScript -->
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+            <script type="text/javascript" src="libs/ui-bootstrap-tpls-2.5.0.js"></script>
     </head>
     <body>
         <div ng-app="myApp">
             <div ng-controller="myCtrl">
+                    <script type="text/ng-template" id="alert.html">
+                    <div ng-transclude></div>
+                    </script>
+                
+                    <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
+                    <div uib-alert template-url="alert.html" style="background-color:#fa39c3;color:white">A happy alert!</div>
+                    <button type="button" class='btn btn-default' ng-click="addAlert()">Add Alert</button>
                 Rechercher <input type="text" ng-model="search" />
 
-                <table>
+                <table class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <th ng-click="tri('titre')">Titre</th>
@@ -28,9 +48,21 @@
         </div>
         <script type="text/javascript">
             'use strict'
-            var app = angular.module('myApp', []);
+            var app = angular.module('myApp', ['ui.bootstrap']);
 
             app.controller('myCtrl', ['$scope','lequipeService', function($scope, lequipeService){
+                $scope.alerts = [
+                    { type: 'danger', msg: 'Oh snap! Change a few things up and try submitting again.' },
+                    { type: 'success', msg: 'Well done! You successfully read this important alert message.' }
+                ];
+
+                $scope.addAlert = function() {
+                    $scope.alerts.push({msg: 'Another alert!'});
+                };
+
+                $scope.closeAlert = function(index) {
+                    $scope.alerts.splice(index, 1);
+                };
                 $scope.offset = 5;
                 $scope.itemsPerPage = $scope.offset;
                 $scope.pagePrecedente = function(){
